# learn-rust

./: .gitignore  Cargo.toml  README.md  bitebi.txt
actix-web/: Dockerfile
actix-web/actix-demo/: Cargo.toml
actix-web/actix-demo/examples/: custom_response.rs
actix-web/actix-demo/src/: main.rs
actix-web/rust-web-project/: Cargo.toml
actix-web/rust-web-project/src/: main.rs
actix-web/rust-web-project/static/: index.html
async/learn-async-simple_future/: Cargo.toml
async/learn-async-simple_future/src/: main.rs
async/learn-async_await/: Cargo.toml
async/learn-async_await/src/: main.rs
async/learn-future/: Cargo.toml
async/learn-future/examples/: learn-async-await.rs  learn-future2.rs  learn-stream.rs
async/learn-future/examples/future_ext/: and_then_future.rs  join.rs  mod.rs  real_future.rs  simple_future.rs
async/learn-future/src/: main.rs
async/learn-future2/: Cargo.toml
async/learn-future2/src/: and_then_future.rs  join.rs  main.rs  simple_future.rs  time_future.rs
async/learn-stream/: Cargo.toml
async/learn-stream/src/: main.rs
benchmark/learn-benchmark/: Cargo.toml
benchmark/learn-benchmark/src/: lib.rs
demo/binary-tree/: Cargo.toml
demo/demo/: Cargo.toml
demo/demo/examples/: binary-tree.rs  reflect.rs  sort.rs
demo/linked-list/: Cargo.toml
demo/toml-demo/: Cargo.toml
demo/toml-demo/src/: main.rs
diesel/learn-diesel/: Cargo.toml
error/learn-error/: Cargo.toml  sum.txt
error/learn-error/examples/: learn-error-dem2.rs  learn-try.rs
error/learn-error/src/: main.rs  origin.rs  refact1.rs  refact2.rs  refact3.rs  refact4.rs
error/learn-error2/: Cargo.toml
error/learn-error2/src/: main.rs
error/learn-try/: Cargo.toml
error/learn-try/src/: main.rs
macro_rules/macro_rules-debug/: Cargo.toml
macro_rules/macro_rules-debug/src/: main.rs
macro_rules/macro_rules-demo/: Cargo.toml
macro_rules/macro_rules-demo/examples/: macro_rules-demo1.rs  macro_rules-demo2.rs  macro_rules-demo3.rs
macro_rules/macro_rules-demo/src/: main.rs
macro_rules/macro_rules-demo1/: Cargo.toml
macro_rules/macro_rules-demo1/src/: main.rs
macro_rules/macro_rules-demo2/: Cargo.toml
macro_rules/macro_rules-demo2/src/: main.rs
macro_rules/macro_rules-demo3/: Cargo.toml
macro_rules/macro_rules-demo3/src/: main.rs
proc-macro/attribute-demo/: Cargo.toml
proc-macro/attribute-demo/attribute-demo-lib/: Cargo.toml
proc-macro/attribute-demo/attribute-demo-lib/src/: lib.rs
proc-macro/attribute-demo/src/: main.rs
proc-macro/attribute-demo1/: Cargo.toml
proc-macro/attribute-demo1/attribute-demo1-lib/: Cargo.toml
proc-macro/attribute-demo1/src/: main.rs
proc-macro/attribute-sorted/: Cargo.toml
proc-macro/attribute-sorted/src/: lib.rs  visitor.rs
proc-macro/derive-builder/: Cargo.toml
proc-macro/derive-builder/src/: lib.rs
proc-macro/derive-builder/tests/: 01-parse.rs  06-optional-field.rs  09-redefined-prelude-types.rs
proc-macro/derive-demo/: Cargo.toml
proc-macro/derive-demo/into_map_derive/src/: lib.rs
proc-macro/derive-demo/src/: main.rs
proc-macro/derive-demo1/: Cargo.toml
proc-macro/derive-demo1/into_map_derive/: Cargo.toml
proc-macro/proc-macro-demo/: Cargo.toml
proc-macro/proc-macro-demo1/: Cargo.toml
proc-macro/proc-macro-demo1/proc-macro-lib/: Cargo.toml
proc-macro/proc-macro-demo1/proc-macro-lib/src/: lib.rs
proc-macro/proc-macro-demo1/src/: main.rs
proc-macro/proc-macro-seq/: Cargo.toml
proc-macro/proc-macro-seq/src/: lib.rs
proc-macro/proc-macro-seq/tests/: 01-parse-header.rs  03-expand-four-errors.rs  05-repeat-section.rs
rand/learn-rand/: Cargo.toml
rand/learn-rand/src/: main.rs
serde/learn-serde/: Cargo.toml
serde/learn-serde/src/: main.rs
sqlx/learn-sqlx/: Cargo.toml
sqlx/learn-sqlx/src/: main.rs
src/: main.rs
test/test-example/: Cargo.toml  aa.txt
test/test-example/examples/: aa.txt  cow-demo.rs  cow-demo2.rs  demo1.rs
test/test-example/src/: lib.rs
tokio/async-io/: Cargo.toml  foo.txt  foo2.txt
tokio/learn-select/: Cargo.toml
tokio/learn-select/src/: main.rs
tokio/my-redis/: Cargo.toml
tokio/my-redis/examples/: async-io.rs  hello-redis.rs  learn-select.rs  learn-server.rs  redis-client.rs
tokio/my-redis/src/: main.rs
tokio/redis-client/: Cargo.toml
toml/learn-toml/: Cargo.toml  Config.toml
toml/learn-toml/src/: main.rs
trait/trait_enum/: Cargo.toml
trait/trait_enum/src/: main.rs
warp/warp_demo/: Cargo.toml
warp/warp_demo/src/: lib.rs
warp/warp_practical/: Cargo.toml
warp/warp_practical/src/: main.rs
warp/warp_practical_2/: Cargo.toml
warp/warp_practical_2/src/: main.rs
warp/warp_practical_3/: Cargo.toml
wasm-bindgen/add/: Cargo.toml  index.js
wasm-bindgen/console_log/: Cargo.toml  index.js  webpack.config.js
wasm-bindgen/console_log/src/: lib.rs
wasm-bindgen/hello-world/: Cargo.toml
wasm-bindgen/hello-world/src/: lib.rs
wasm-bindgen/learn-bindgen/: Cargo.toml
wasm-bindgen/without-a-bundler/: Cargo.toml  index.html
wasm-bindgen/without-a-bundler/src/: lib.rs
