[package]
name = "learn-rust"
version = "0.1.0"
authors = ["WeiHu Liu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    # benchmark
    "benchmark/learn-benchmark",
    # macro_rules
    "macro_rules/macro_rules-demo",
    # proc-macro
    "proc-macro/proc-macro-demo",
    "proc-macro/proc-macro-seq",
    "proc-macro/attribute-demo",
    "proc-macro/attribute-sorted",
    "proc-macro/derive-builder",
    "proc-macro/derive-demo",
    # learn rust web (actix-web)
    "actix-web/rust-web-project",
    # demo
    "demo/demo",
    "demo/toml-demo",
    # test
    "test/test-example",
    # trait
    "trait/trait_enum",
    # error
    "error/learn-error",
    # sqlx
    "sqlx/learn-sqlx",
    # async
    "async/learn-future",
    #serde
    "serde/learn-serde",
    #rand
    "rand/learn-rand",
    #toml
    "toml/learn-toml",
    #tokio
    "tokio/my-redis",
    #wasm-bindgen
    "wasm-bindgen/learn-bindgen",
]
