[package]
name = "rust-web-project"
version = "0.1.0"
authors = ["WeiHu Liu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
serde_json = "1.0.62"
handlebars = {version = "3.5.2", features = ["dir_source"]}

