[package]
name = "learn-error"
version = "0.1.0"
authors = ["liuweihu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.24"
tokio = {version = "1.5.0", features = ["macros", "rt-multi-thread"]}
