[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.39", features = ["diff"] }

[dependencies]
syn = {version = "1.0.60", features = ["extra-traits","derive"]}
quote = "1.0.8"
proc-macro2 = "1.0.24"