[package]
name = "learn-sqlx"
version = "0.1.0"
authors = ["liuweihu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.3.0", features = ["macros"]}