[package]
name = "warp_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "warp_demo"
path = "src/bin/main.rs"

[lib]
name = "warp_demo"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = {version = "1.7.1", features = ["full"]}
warp = "0.3.1"
