[package]
name = "console_log"
version = "0.1.0"
authors = ["Liu-WeiHu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.72"
web-sys = {version = "0.3.49", features = ["console"]}
