[package]
name = "into_map_derive"
version = "0.1.0"
authors = ["WeiHu Liu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.60", features = ["extra-traits"]}
quote = "1.0.8"


[lib]
proc-macro = true